# sequanix

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: main.yml  pypi.yml
sequanix/: __init__.py  misc.py  sequanix.py  utils.py
sequanix/ui/: Makefile  __init__.py  help.ui  mainwindow.ui  preferences.ui  snakemake.ui  ui_help.py  ui_mainwindow.py  ui_preferences.py  ui_snakemake.py
sequanix/widgets/: __init__.py  about.py  browser.py  file_browser.py  help.py  ipython.py  messages.py  preferences.py  snakemake.py  tools.py  widgets.py
tests/: test_file_browser.py  test_ipython.py  test_misc.py  test_sequanix_gui.py  test_utils.py  test_widgets.py
tests/resources/: test_complex_config.yml  test_generic.smk  test_generic.yml  test_generic_config.smk  test_generic_config.yml  test_generic_config_kwargs.smk  test_generic_noconfig.smk
